Kube/authdb_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authdb
  template:
    metadata:
      labels:
        app: authdb
    spec:
      containers:
        - name: authdb
          image: "mysql:5.7"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage-auth
              mountPath: /var/lib/mysql  # Percorso di montaggio nel container
      volumes:
        - name: mysql-storage
          emptyDir: {}  # Usa un emptyDir per archiviare i dati temporanei. Personalizza se necessario.

---
apiVersion: v1
kind: Service
metadata:
  name: authdb
spec:
  selector:
    app: authdb
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: ClusterIP
