Kube/authentication-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: authentication-service
  name: authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authentication-service
  template:
    metadata:
      labels:
        io.kompose.service: authentication-service
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: authentication
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://authdb:3308/db_authentication
            - name: SPRING_DATASOURCE_USERNAME
              value: authentication
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: psanger/authentication-service
          name: authentication-service
          ports:
            - containerPort: 8081
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: authentication-service
  name: authentication-service
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: authentication-service
  type: ClusterIP
