Kube/home-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: home-service
  name: home-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: home-service
  template:
    metadata:
      labels:
        io.kompose.service: home-service
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: musicdraft
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://mysqldb:3306/db_musicdraft
            - name: SPRING_DATASOURCE_USERNAME
              value: musicdraft
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: psanger/home-service
          name: home-service
          ports:
            - containerPort: 8082
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: home-service
  name: home-service
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: home-service
  type: LoadBalancer
