Kube/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: "mysql:5.7"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql  # Percorso di montaggio nel container
      volumes:
        - name: mysql-storage
          emptyDir: {}  # Usa un emptyDir per archiviare i dati temporanei. Personalizza se necessario.

---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  selector:
    app: mysqldb
  ports:
    - protocol: TCP
      port: 3307
      targetPort: 3306
  type: LoadBalancer
